fixed burger being suppressed by nav z-index

--- a/css/main.css
+++ b/css/main.css
@@ -39,11 +39,10 @@ body {
 
 /* nav bar */
 #topnav {
-  position: sticky;
   width: 90%;
   overflow: hidden;
   width: 100%;
-  z-index: 1000000;
+  /* z-index: 1000000; */
   top: 0;
 }
 
